pkg/lang/syntax/testdata/ub/lower/invalid/lock-toolchain-schema-errors.ub
lock: {
  version: 1
  toolchain: {}
  deps: {}
}
